se hizo la correccion de las mensualidades donde tambien se muestra de que mes esta pagando, aun falta que se refleje en el pdf por que aun no nos enviaron el formato ofical del pdf

--- a/frontend/src/app/components/pages/cobros/mensualidad-modal/mensualidad-modal.component.html
+++ b/frontend/src/app/components/pages/cobros/mensualidad-modal/mensualidad-modal.component.html
@@ -136,7 +136,7 @@
             <div class="col-md-4">
               <label class="form-label">Cant. mensualidades a pagar</label>
               <select class="form-select" formControlName="cantidad">
-                <option *ngFor="let n of getCantidadOptions()" [ngValue]="n">{{ n }}</option>
+                <option *ngFor="let n of getCantidadOptions()" [ngValue]="n">{{ getCantidadLabel(n) }}</option>
               </select>
             </div>
             <div class="col-md-4">
