--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -125,6 +125,7 @@
 						[totalCobro]="totalCobro"
 						[isSelected]="true"
 						[cuentasBancarias]="cuentasBancarias"
+						[identidad]="identidadForm"
 						(statusChange)="onQrStatusChange($event)">
 					</app-qr-panel>
 				</div>
@@ -166,7 +167,7 @@
 								
 										<!-- P/U -->
 										<td class="text-end">
-											<span class="d-block">{{ pg.get('pu_mensualidad')?.value | number:'1.2-2' }}</span>
+											<span class="d-block">{{ calcRowSubtotal(i) | number:'1.2-2' }}</span>
 										</td>
 								
 										<!-- Descuento -->
