--- a/frontend/src/app/components/pages/cobros/recuperacion-modal/recuperacion-modal.component.html
+++ b/frontend/src/app/components/pages/cobros/recuperacion-modal/recuperacion-modal.component.html
@@ -30,7 +30,7 @@
         </div>
 
         <form [formGroup]="form" class="row g-3">
-          <div class="col-md-12">
+          <div class="col-md-4">
             <label class="form-label">Tipo de registro</label>
             <div class="d-flex align-items-center gap-3">
               <div class="form-check">
@@ -43,9 +43,22 @@
               </div>
             </div>
           </div>
+          <div class="col-md-8">
+            <label class="form-label">Comprobante</label>
+            <div class="d-flex align-items-center gap-3">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" id="comp_recibo_rec" value="RECIBO" formControlName="comprobante" />
+                <label class="form-check-label" for="comp_recibo_rec">Recibo</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" id="comp_factura_rec" value="FACTURA" formControlName="comprobante" />
+                <label class="form-check-label" for="comp_factura_rec">Factura</label>
+              </div>
+            </div>
+          </div>
 
-          <!-- Bloque bancario reutilizado -->
-          <ng-container *ngIf="showBancarioBlock">
+          <!-- Bloque bancario reutilizado (oculto para QR) -->
+          <ng-container *ngIf="showBancarioBlock && !isQR">
             <div class="col-12">
               <div class="border rounded p-3 mb-2">
                 <div class="row g-3 align-items-end">
@@ -117,16 +130,9 @@
             </div>
           </div>
 
-          <div class="col-md-8">
+          <div class="col-md-12">
             <label class="form-label">Observaciones</label>
             <textarea class="form-control" rows="2" formControlName="observaciones"></textarea>
-          </div>
-          <div class="col-md-4">
-            <label class="form-label">Comprobante</label>
-            <select class="form-select" formControlName="comprobante">
-              <option value="RECIBO">Recibo</option>
-              <option value="FACTURA">Factura</option>
-            </select>
           </div>
         </form>
       </div>
