cobros combinados efectivo y qr ya funcionando correctamente en mensualidadesfalta pulir para los demas metodos de cobro

--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -125,6 +125,7 @@
 						[totalCobro]="totalCobro"
 						[isSelected]="true"
 						[cuentasBancarias]="cuentasBancarias"
+						[formasCobro]="formasCobro"
 						[identidad]="identidadForm"
 						(statusChange)="onQrStatusChange($event)">
 					</app-qr-panel>
