ya refinando factura con metodo de pago efectivo lo que falta es con los demas metodos de pago y los demas pasos ded anulacion y contingencia

--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -73,6 +73,8 @@
 									</select>
 								</div>
 								<div class="col-12">
+								</div>
+								<div class="col-12">
 									<label class="form-label">Grupo</label>
 									<div class="form-control-plaintext border rounded px-2 py-2">
 										<ng-container *ngIf="(resumen?.inscripciones?.length || 0) > 0; else noInscripciones">
